--- a/app/views/discover/_submenu.html.erb
+++ b/app/views/discover/_submenu.html.erb
@@ -2,13 +2,13 @@
 	<div class="items pull-right">	
 		<ul class="pull-right sub-actions">
 			<li class="activity <%= "active" if section.eql?(:trips) %>">
-				<a href="<%= discover_trips_path %>">
+				<a href="<%= discover_trips_path %>" class="discover-section-trips">
 					<p class="numeric"><%= trips_count == '?' ? '' : trips_count %></p>
 					<p class="kind"><%= trips_count == 1 ? "PASEO" : "PASEOS" %></p>
 				</a>
 			</li>
 			<li class="activity <%= "active" if section.eql?(:cycling_groups) %>">
-				<a href="<%= discover_cycling_groups_path %>">
+				<a href="<%= discover_cycling_groups_path %>" class="discover-section-cycling-groups">
 					<p class="numeric"><%= groups_count == '?' ? '' : groups_count %></p>
 					<p class="kind"><%= groups_count == 1 ? "GRUPO" : "GRUPOS" %></p>
 				</a>
