--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -13,7 +13,9 @@
 						</div>
 						<div class="pull-right">
 							<div class="btn-group">
-								<a href="<%= discover_cycling_groups_new_path %>" class="btn btn-warning btn-small pull-right"><i class="icon icon-plus-sign"></i> <%= t('app.models.cycling_group') %></a>
+								<a href="<%= discover_cycling_groups_new_path %>" class="btn btn-warning btn-small pull-right new-cycling-group-profile">
+									<i class="icon icon-plus-sign"></i> <%= t('app.models.cycling_group') %>
+								</a>
 							</div>
 						</div>
 					<% else %>
@@ -24,7 +26,9 @@
 						<div class="pull-left"><p><%=t('user_profiles.views.main.user_same.activity', :number => @user.activities[:cycling_groups].length) %></p></div>
 						<div class="pull-right">
 							<div class="btn-group">
-								<a href="<%= discover_cycling_groups_new_path %>" class="btn btn-warning btn-small pull-right"><i class="icon icon-plus-sign"></i> <%= t('app.models.cycling_group') %></a>
+								<a href="<%= discover_cycling_groups_new_path %>" class="btn btn-warning btn-small pull-right new-cycling-group-profile">
+									<i class="icon icon-plus-sign"></i> <%= t('app.models.cycling_group') %>
+								</a>
 							</div>
 						</div>
 					<% else %>
