--- a/app/views/cycling_groups/_form.html.erb
+++ b/app/views/cycling_groups/_form.html.erb
@@ -142,6 +142,14 @@
 		</div>
 	</div>
 	<br/>
+	
+	<div class="row-fluid">
+		<div class="span12">
+			<div id="cycling_group_facebook_url_regexp" class="alert alert-error error">
+				<%= t('cycling_groups.views.form.validations.url') %>
+			</div>
+		</div>
+	</div>
 	<div class="row-fluid">
 		<div class="span2 right-text">
 			<%= f.label :facebook_url, t('cycling_groups.views.form.facebook_url') %>
@@ -151,6 +159,14 @@
 		</div>
 	</div>
 	<br/>
+	
+	<div class="row-fluid">
+		<div class="span12">
+			<div id="cycling_group_website_url_regexp" class="alert alert-error error">
+				<%= t('cycling_groups.views.form.validations.url') %>
+			</div>
+		</div>
+	</div>
 	<div class="row-fluid">
 		<div class="span2 right-text">
 			<%= f.label :website_url, t('cycling_groups.views.form.website_url') %>
