--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -28,12 +28,12 @@
 	
 	.decoration-image {
 		pointer-events: none;
-		width: 500px;
-		height: 313px;
+		width: 399px;
+		height: 250px;
 		position: absolute;
 		opacity: 0.15;
-		left: 10%;
-		margin-right: 150px;
+		left: 50%;
+		margin-left: -200px;
 		background-image: url('/assets/city_cycling.png');
 	}
 	
@@ -190,4 +190,12 @@
 
 .separator {
 	border-top: 1px solid #FFDDB1;
+}
+
+.cycling-group-light {
+	.controls {
+		.button_to {
+			text-align: right;
+		}
+	}
 }
