--- a/app/assets/stylesheets/map_based/common.css.scss
+++ b/app/assets/stylesheets/map_based/common.css.scss
@@ -35,8 +35,14 @@
 		list-style: none;
 		
 		> li {
+			> a {
+				display: inline-block;
+				background-color: none !important;
+				text-decoration: none;
+				padding: 10px;
+				margin:0px;
+			}
 			display: inline-block;
-			padding: 10px;
 		}
 				
 		> li.active {
