--- a/app/views/layouts/shared/_navbar_maps.html.erb
+++ b/app/views/layouts/shared/_navbar_maps.html.erb
@@ -12,7 +12,7 @@
 				<li class="user-logged-in dropdown">
 					<%= link_to "<i class='icon-chevron-down'></i> #{current_user.username}".html_safe, '#', :class => "dropdown-toggle", "data-toggle"=>"dropdown" %>
 					<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-						<li><%= link_to 'Perfil', user_profile_path(current_user.username) %></li>
+						<li><%= link_to 'Perfil', user_settings_path(current_user.username) %></li>
 						<li class="divider"></li>
 						<li><%= link_to 'Cerrar Sesión', destroy_user_session_path, :method => :delete %></li>
 			    </ul>
