--- a/app/views/user_settings/show.html.erb
+++ b/app/views/user_settings/show.html.erb
@@ -17,7 +17,7 @@
 					<p class="section-title">Ajustes básicos de tu cuenta</p>
 					<div class="separator"></div>
 					<div class="row-fluid">
-						<%= form_for(@user, :url => settings_changed_path(@user), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
+						<%= form_for(@user, :url => user_settings_update_path(@user.username), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
 							<div class="span2"></div>
 							<div class="span10">
 								<div class="control-group">
@@ -80,15 +80,15 @@
 					<div class="separator"></div>
 					
 					<div class="row-fluid delete-current-picture">
-						<% unless current_user.picture.nil? %>
+						<% unless @user.picture.nil? %>
 							<p>
 								<span>Si lo deseas, puedes eliminar la imagen actual: </span>
-								<%= link_to '<i class="icon-remove icon"></i> Eliminar'.html_safe, settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
+								<%= link_to '<i class="icon-remove icon"></i> Eliminar'.html_safe, user_settings_destroy_pic_path(@user.username), :method => :delete, :class => "btn btn-danger pull-right" %>
 								</p>
 						<% end %>
 					</div>
 					<div class="row-fluid">
-							<%= form_tag settings_change_picture_path, :multipart => true , :method => :put, :class => "form-horizontal" do %>
+							<%= form_tag user_settings_update_pic_path(@user.username), :multipart => true , :method => :put, :class => "form-horizontal" do %>
 								<div class="centered-text">
 									<div class="fileupload fileupload-new" data-provides="fileupload">
 										<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
