--- a/app/views/layouts/routes.html.erb
+++ b/app/views/layouts/routes.html.erb
@@ -3,15 +3,12 @@
 <head>
   <title><%= t('app.name') %> : Routes </title>
 	
-  <%= stylesheet_link_tag  "maps" %>
-  
-	<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-	<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+  <%= stylesheet_link_tag  "routes" %>
+
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<%= javascript_include_tag "profiles" %>
+	<%= javascript_include_tag "routes" %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
-	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
 <body>
