--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -11,63 +11,9 @@
 	<%= render 'layouts/shared/fav_icons' %>
 	<%= render 'layouts/shared/mix_panel' %>
 </head>
-<body>
+<body>	
 	
-<div class="background-logo"></div>
-
-<!-- Navbar
-================================================== -->
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-			<%= link_to t('app.name'), root_path.concat('#/'), :class => "brand" %>
-      <div class="nav-collapse collapse">
-        <ul class="nav">
-          <li class="what-is"><%= link_to t('app.landing.navbar.what_is'), '#/what-is' %></li>
-					<li class="register"><%= link_to t('app.landing.navbar.register'), '#/register' %></li>
-					<li class="allies"><%= link_to t('app.landing.navbar.allies'), '#/allies' %></li>
-					<li class="media_"><%= link_to t('app.landing.navbar.media'), '#/media' %></li>
-					
-				</ul>
-				<ul class="nav pull-right">
-					<% if Date.today >= Date.parse("17-05-2013")%>
-						<li><%= link_to t('app.landing.navbar.explore'), discover_trips_path, :class => 'blue' %></li>
-					<% end %>
-					<%= render 'layouts/shared/navbar_logged_in_user' %>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row-fluid">
-	<div id="slider" class="span12 centered-text">
-		<%= image_tag('ciudad-pois-bici.png', :id => "s-1", :class => "sprite") %>
-	</div>
-</div>
-
-<div class="content-fluid">
-	<div class="row-fluid">
-		<div class="span3"></div>
-		<div class="span6 adjust-margin"><%= yield %></div>
-		<div class="span3"></div>
-	</div>
-</div>
-
-<div class="footer">
-	<p class="title orange"><%= t('app.name') %></p>
-	<p class="with-love"><%= t('app.landing.footer.made_in_mexico').html_safe %></p>
-	<ul>
-		<li><%= link_to image_tag('social_tweet.png', :size => '25x25'), "http://www.twitter.com/wikicleta", :target => "_blank" %></li>
-		<li><%= link_to image_tag('social_fb.png', :size => '25x25'), "http://www.facebook.com/pages/Wikicleta/305039579602752", :target => "_blank" %></li>
-		<li class="really-tiny"><%= mail_to "contacto@wikicleta.com" %></li>
-	</ul>
-</div>
+<%= yield %>
 
 </body>
 </html>
