--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,61 @@
-<%= render 'details' %>
-<%= render 'allies' %>
-<%= render 'register' %>
-<%= render 'media' %>
+<div class="top-bar">
+	<ul>
+		<li><a href="<%= discover_trips_path %>"><i class="icon icon-search"></i>&nbsp;&nbsp;<%= t('app.landing.navbar.explore') %></a></li>
+		<li><a href="<%= rodada_nueva_path %>"><i class="icon icon-arrow-up"></i>&nbsp;&nbsp;<%= t('app.landing.navbar.share_group') %></a></li>
+		<% if 1 == 2 %>
+			<li><a href="<%= rodada_nueva_path %>"><i class="icon icon-flag"></i>&nbsp;&nbsp;<%= t('app.landing.navbar.language.english') %></a></li>	
+		<% end %>	
+	</ul>
+</div> 
+	
+<%= link_to '', "http://fondeadora.mx/projects/wikicleta", :target => "_blank", :class => "founding" %>
+	
+<div class="container-fluid">
+  <div class="row-fluid">
+  	<div class="span2"></div>
+  	<div class="span8 all-centered">
+			<%= image_tag('wikicleta-logo.png') %>
+			<p class="title"><%= t('app.slogan') %></p>
+		</div>
+  	<div class="span2"></div>
+  </div>
+</div>
 
+<div class="bottom-bar">
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span3"></div>
+			<div class="span3 all-centered">
+				<%= link_to image_tag('android-available.png', :size => '230x230'), 'https://play.google.com/store/apps/details?id=org.wikicleta&hl=en', :target => "_blank" %>
+			</div>
+			<div class="span3 all-centered">
+				<a href="javascript:void(0);" class="title iphone" data-toggle="modal" data-target="#myModal"><%= t('app.landing.bottombar.iphone') %> <%= image_tag('iphone-icon.png') %></a>
+			</div>
+			<div class="span3"></div>
+		</div>
+	</div>
+</div>
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog email-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <p class="title all-centered"><%= t('app.landing.dialog.title').html_safe %></p>
+      </div>
+      <div class="modal-body">
+        <p class="content all-centered"><%= t('app.landing.dialog.call') %></p>
+				
+				<div class="all-centered contact-form">
+					<%= form_for Contact.new, :remote => true do |f| %>
+						<div class="form-group">
+							<%= f.email_field :email, :placeholder => t('app.landing.dialog.email'), :class=>"form-control" %>
+						</div>
+						<%= f.submit t('actions.send'), :class => "btn btn-primary" %>
+					<% end %>
+				</div>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
