Fully responsive landing page

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title><%= t('app.name') %></title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<%= stylesheet_link_tag    "landing" %>
   <%= javascript_include_tag "landing" %>
   <%= csrf_meta_tags %>
