--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -22,6 +22,7 @@ font-family: "gothamrndbold-Bold";
 }
 
 html, body { 
+	height: 100%;
   background: url('/assets/background.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -32,8 +33,8 @@ html, body {
 
 .title {
 	color: $wikicleta_orange;
-	font-size: 28px;
 	margin-top: 15px;
+	font-size: 28px;
 }
 
 .content {
@@ -52,12 +53,15 @@ html, body {
 }
 
 .founding {
-	background: url('/assets/fondeo.png');
-	width: 300px;
-	height: 300px;
 	position: fixed;
 	top: 0px;
 	right: 0px;
+}
+
+.logo-container {
+	display: fixed;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .top-bar {
@@ -70,13 +74,16 @@ html, body {
 				text-decoration: none;
 				color: $wikicleta_blue;
 			}
+			a:hover {
+				color: $wikicleta_orange !important;
+			}
 		}
 	}
 }
 
 .bottom-bar {
 	left: 0px;
-	bottom: 50px;
+	bottom: 30px;
 	width: 100%;
 	position: fixed;
 }
@@ -97,5 +104,73 @@ a.iphone {
 .email-dialog {
 	.title {
 		font-size: 20px;
+	}
+}
+
+/* Portrait */
+@media screen and (orientation:portrait) {
+    .logo-container {
+			width: 70%;
+			margin-top: 40px !important;
+		}
+
+		.founding {
+			width: 40%;
+			height: 40%;
+		}
+
+		.title {
+			font-size: 14px;
+		}
+
+		.web-only {
+			display: none !important;
+		}
+		
+		.bottom-bar {
+			bottom: 0px !important;
+		}
+}
+
+/* Landscape */
+@media screen and (orientation:landscape) and (max-device-width : 480px) {
+    .logo-container {
+			width: 40%;
+		}
+
+		.founding {
+			width: 30%;
+			height: 30%;
+		}
+
+		.title {
+			font-size: 18px;
+			display: none;
+		}
+
+		.web-only {
+			display: none !important;
+		}
+		
+		.bottom-bar {
+			bottom: 0px !important;
+			
+			img {
+				width: 150px;
+			}
+		}
+}
+
+@media only screen and (min-device-width : 481px) and (min-device-height : 768px) {
+	.logo-container {
+		width: 30%;
+	}
+
+	.title {
+		font-size: 22px;
+	}
+	
+	.bottom-bar {
+		bottom: 20px !important;
 	}
 }
