--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,6 +19,10 @@
 <div class="logo-container all-centered">
 	<%= image_tag('wikicleta-logo.png') %>
 	<p class="title"><%= t('app.slogan') %></p>
+	
+	<div class="play-video">
+		<%= link_to image_tag('play_icon.png'), 'http://vimeo.com/54044179', :class => "fancybox" %>
+	</div>
 </div>
 
 <div class="bottom-bar">
